# ThinkMesh

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: benchmark.yml  test.yml
docs/: README.md  quick_start.md  strategies.md
examples/: gsm8k_benchmark.py  math_problems.py
scripts/: generate_report.py  run_benchmarks.py  run_full_test_suite.py
src/thinkmesh/: __init__.py  config.py  core.py  orchestrator.py  types.py
src/thinkmesh/adapters/: anthropic_api.py  base.py  openai_api.py  tgi.py  transformers_local.py  vllm.py
src/thinkmesh/cache/: store.py
src/thinkmesh/cli/: thinkmesh_cli.py
src/thinkmesh/confidence/: meters.py  realloc.py
src/thinkmesh/production/: __init__.py  error_handling.py  monitoring.py  validation.py
src/thinkmesh/reduce/: judge.py  majority.py  verifier.py
src/thinkmesh/sched/: rate_limit.py  runner.py
src/thinkmesh/strategies/: base.py  debate.py  deepconf.py  graph.py  self_consistency.py  tree.py
src/thinkmesh/telemetry/: metrics.py  otel.py
src/thinkmesh/utils/: prompts.py  traces.py
tests/: conftest.py
tests/benchmarks/: gsm8k_utils.py  test_gsm8k.py
tests/integration/: test_end_to_end.py
tests/performance/: test_a100_performance.py
tests/unit/: test_adapters.py  test_strategies.py
